fixed service page bugs

--- a/contact.html
+++ b/contact.html
@@ -99,12 +99,12 @@
                         <div class="select-container">
                             <select id="budget-input" name="budget-input" required>
                                 <option value="" selected hidden class="placeholder">Choose budget</option>
-                                <option value="$2500">Under $2500</option>
-                                <option value="$5000">$2500-$5000</option>
-                                <option value="$10000">$5000-$10000</option>
-                                <option value="$50000">$10000-$50000</option>
-                                <option value="$100000">$50000-$100000</option>
-                                <option value="+$100000">Over $100000</option>
+                                <option value="Under $2500">Under $2500</option>
+                                <option value="$2500-$5000">$2500-$5000</option>
+                                <option value="$5000-$10000">$5000-$10000</option>
+                                <option value="$10000-$50000">$10000-$50000</option>
+                                <option value="$50000-$100000">$50000-$100000</option>
+                                <option value="Over $100000">Over $100000</option>
                             </select>
                             <img src=images/icons/down-arrow.png>
                         </div>
@@ -122,6 +122,7 @@
                 </div>          
             </form>
         </div>
+        <div id="form-response"></div>
         <div class="line"></div>
         <footer>
             <div id="contact-info">
