Refactors JavaScript Slideshow code
Javascript code was repeating, generalized function to
accept parameters and decrease amount of code.

--- a/services.html
+++ b/services.html
@@ -55,13 +55,13 @@
                     <div class="slide fade slides">
                         <img src="images/services/Basement3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide','dot')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide','dot')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot dots" onclick="currentSlide(1)"></span>
-                    <span class="dot dots" onclick="currentSlide(2)"></span>
-                    <span class="dot dots" onclick="currentSlide(3)"></span>
+                    <span class="dot dots" onclick="currentSlide(1,'slide','dot')"></span>
+                    <span class="dot dots" onclick="currentSlide(2,'slide','dot')"></span>
+                    <span class="dot dots" onclick="currentSlide(3,'slide','dot')"></span>
                 </div>                
             </div>
             <p class="description">
@@ -88,13 +88,13 @@
                     <div class="slide1 fade slides">
                         <img src="images/services/kitchen3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides1(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide1','dot1')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide1','dot1')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot1 dots" onclick="currentSlide1(1)"></span>
-                    <span class="dot1 dots" onclick="currentSlide1(2)"></span>
-                    <span class="dot1 dots" onclick="currentSlide1(3)"></span>
+                    <span class="dot1 dots" onclick="currentSlide(1,'slide1','dot1')"></span>
+                    <span class="dot1 dots" onclick="currentSlide(2,'slide1','dot1')"></span>
+                    <span class="dot1 dots" onclick="currentSlide(3,'slide1','dot1')"></span>
                 </div>            
             </div>
             <p class="description">
@@ -121,13 +121,13 @@
                     <div class="slide2 fade slides">
                         <img src="images/services/bathroom3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides2(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide2','dot2')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide2','dot2')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot2 dots" onclick="currentSlide2(1)"></span>
-                    <span class="dot2 dots" onclick="currentSlide2(2)"></span>
-                    <span class="dot2 dots" onclick="currentSlide2(3)"></span>
+                    <span class="dot2 dots" onclick="currentSlide(1,'slide2','dot2')"></span>
+                    <span class="dot2 dots" onclick="currentSlide(2,'slide2','dot2')"></span>
+                    <span class="dot2 dots" onclick="currentSlide(3,'slide2','dot2')"></span>
                 </div>            
             </div>
             <p class="description">
@@ -153,13 +153,13 @@
                     <div class="slide3 fade slides">
                         <img src="images/services/carpentry3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides3(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides3(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide3','dot3')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide3','dot3')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot3 dots" onclick="currentSlide3(1)"></span>
-                    <span class="dot3 dots" onclick="currentSlide3(2)"></span>
-                    <span class="dot3 dots" onclick="currentSlide3(3)"></span>
+                    <span class="dot3 dots" onclick="currentSlide(1,'slide3','dot3')"></span>
+                    <span class="dot3 dots" onclick="currentSlide(2,'slide3','dot3')"></span>
+                    <span class="dot3 dots" onclick="currentSlide(3,'slide3','dot3')"></span>
                 </div>            
             </div>
             <p class="description">
@@ -185,13 +185,13 @@
                     <div class="slide4 fade slides">
                         <img src="images/services/living3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides4(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides4(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide4','dot4')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide4','dot4')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot4 dots" onclick="currentSlide4(1)"></span>
-                    <span class="dot4 dots" onclick="currentSlide4(2)"></span>
-                    <span class="dot4 dots" onclick="currentSlide4(3)"></span>
+                    <span class="dot4 dots" onclick="currentSlide(1,'slide4','dot4')"></span>
+                    <span class="dot4 dots" onclick="currentSlide(2,'slide4','dot4')"></span>
+                    <span class="dot4 dots" onclick="currentSlide(3,'slide4','dot4')"></span>
                 </div>            
             </div>
             <p class="description">
@@ -208,21 +208,21 @@
             <div class="carousel-container">
                 <div class="slideshow-container">
                     <div class ="slide5 fade slides">
-                        <img src="images/services/bathroom1.jpg">
+                        <img src="images/services/other1.jpg">
                     </div>
                     <div class="slide5 fade slides">
-                        <img src="images/services/bathroom2.jpg">
+                        <img src="images/services/other2.jpg">
                     </div>
                     <div class="slide5 fade slides">
-                        <img src="images/services/bathroom3.jpg">
+                        <img src="images/services/other3.jpg">
                     </div>
-                    <a class="prev" onclick="plusSlides5(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides5(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1,'slide5','dot5')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1,'slide5','dot5')">&#10095;</a>
                 </div>
                 <div class="dot-container">
-                    <span class="dot5 dots" onclick="currentSlide5(1)"></span>
-                    <span class="dot5 dots" onclick="currentSlide5(2)"></span>
-                    <span class="dot5 dots" onclick="currentSlide5(3)"></span>
+                    <span class="dot5 dots" onclick="currentSlide(1,'slide5','dot5')"></span>
+                    <span class="dot5 dots" onclick="currentSlide(2,'slide5','dot5')"></span>
+                    <span class="dot5 dots" onclick="currentSlide(3,'slide5','dot5')"></span>
                 </div>            
             </div>
             <div class="other-container">
